# gstreamerAndroidLibavIssue

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
android/src/main/java/: GStreamerSurfaceView.java  VideoActivity.java
example/: errors.txt
example/android/: build.gradle
example/android/app/: build.gradle
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugins.cmake
ios/Classes/: native_binding.c
lib/: native_binding.dart  native_binding_bindings_generated.dart
lib/rendering/: video_painter.dart  video_painter_widget.dart  video_texture_widget.dart  video_widget.dart
macos/: native_binding.podspec
src/: CMakeLists.txt  gst_plugin_init_android.c  native_binding.cpp  native_binding.h
